--- a/map.html
+++ b/map.html
@@ -4,10 +4,8 @@
 
     <div class="controls-bar">
         <span>更换背景：</span>
-        <div class="file-input-wrapper cte-btn">
-            <span>📂 选择图片...</span>
-            <input type="file" id="bg-upload" accept="image/*" onchange="window.CTEMap.changeBackground(this)">
-        </div>
+        <button class="cte-btn" onclick="document.getElementById('bg-upload').click()">📂 选择图片...</button>
+        <input type="file" id="bg-upload" accept="image/*" style="display:none;" onchange="window.CTEMap.changeBackground(this)">
         <span style="margin-left:auto; font-size: 12px; color: #888;">提示：坐标位置会自动保存</span>
     </div>
 
@@ -86,7 +84,7 @@
 
     <!-- 其他地点 (批量生成) -->
     <div id="office-popup" class="cte-popup"><span class="close-btn" onclick="window.CTEMap.closeAllPopups()">&times;</span><h3>🏢 远洋集团</h3><p>主营航运、大宗商品与投资的家族企业。</p><div style="text-align:center"><button class="cte-btn" onclick="window.CTEMap.openTravelMenu('远洋集团')">🚀 前往</button></div></div>
-    <div id="villa-popup" class="cte-popup"><span class="close-btn" onclick="window.CTEMap.closeAllPopups()">&times;</span><h3>🏰 私人别墅</h3><p>n你自己位于京港北区的一栋独栋别墅。</p><div style="text-align:center"><button class="cte-btn" onclick="window.CTEMap.openTravelMenu('私人别墅')">🚀 前往</button></div></div>
+    <div id="villa-popup" class="cte-popup"><span class="close-btn" onclick="window.CTEMap.closeAllPopups()">&times;</span><h3>🏰 私人别墅</h3><p>你自己位于京港北区的一栋独栋别墅。</p><div style="text-align:center"><button class="cte-btn" onclick="window.CTEMap.openTravelMenu('私人别墅')">🚀 前往</button></div></div>
     <div id="office2-popup" class="cte-popup"><span class="close-btn" onclick="window.CTEMap.closeAllPopups()">&times;</span><h3>☕ 万城娱乐</h3><p>国内最大的娱乐产业集团之一。</p><div style="text-align:center"><button class="cte-btn" onclick="window.CTEMap.openTravelMenu('万城娱乐')">🚀 前往</button></div></div>
     <div id="office3-popup" class="cte-popup"><span class="close-btn" onclick="window.CTEMap.closeAllPopups()">&times;</span><h3>🏢 盛华集团</h3><p>老牌实业集团，在本地拥有深厚根基。</p><div style="text-align:center"><button class="cte-btn" onclick="window.CTEMap.openTravelMenu('盛华集团')">🚀 前往</button></div></div>
     <div id="office4-popup" class="cte-popup"><span class="close-btn" onclick="window.CTEMap.closeAllPopups()">&times;</span><h3>🏢 隆桑集团</h3><p>京港市的新兴科技巨头。</p><div style="text-align:center"><button class="cte-btn" onclick="window.CTEMap.openTravelMenu('隆桑集团')">🚀 前往</button></div></div>
