--- a/map.html
+++ b/map.html
@@ -1,98 +1,117 @@
-<div class="cte-wrapper">
-    <h1>京港市地图 - 档案模式</h1>
-    <h2>双击标签查看详情，长按拖拽标签移动</h2>
+<!-- 视图切换容器 -->
+<div id="cte-view-map" class="cte-view active">
+    <div class="cte-wrapper">
+        <h1>京港市地图 - 档案模式</h1>
+        <h2>双击标签查看详情，长按拖拽标签移动</h2>
 
-    <div class="controls-bar">
-        <span>更换背景：</span>
-        <button class="cte-btn" onclick="document.getElementById('bg-upload').click()">📂 选择图片...</button>
-        <input type="file" id="bg-upload" accept="image/*" style="display:none;" onchange="window.CTEMap.changeBackground(this)">
-        <span style="margin-left:auto; font-size: 12px; color: #888;">提示：坐标位置会自动保存</span>
-    </div>
+        <div class="controls-bar">
+            <span>更换背景：</span>
+            <button class="cte-btn" onclick="document.getElementById('bg-upload').click()">📂 选择图片...</button>
+            <input type="file" id="bg-upload" accept="image/*" style="display:none;" onchange="window.CTEMap.changeBackground(this)">
+            <span style="margin-left:auto; font-size: 12px; color: #888;">提示：坐标位置会自动保存</span>
+        </div>
 
-    <div class="map-container" id="cte-map-container">
-        <div class="location" id="gov" style="top: 60%; left: 50%;" data-popup="gov-popup"><span class="label">京港市政府</span></div>
-        <div class="location" id="villa" style="top: 15%; left: 25%;" data-popup="villa-popup"><span class="label">私人别墅</span></div>
-        <div class="location" id="dorm" style="top: 15%; left: 50%;" data-popup="dorm-popup"><span class="label">CTE宿舍</span></div>
-        <div class="location" id="PrivateClub" style="top: 15%; left: 75%;" data-popup="PrivateClub-popup"><span class="label">私人会所</span></div>
-        <div class="location" id="airport" style="top: 35%; left: 85%;" data-popup="airport-popup"><span class="label">机场</span></div>
-        <div class="location" id="port" style="top: 65%; left: 85%;" data-popup="port-popup"><span class="label">港口</span></div>
-        <div class="location" id="office4" style="top: 25%; left: 15%;" data-popup="office4-popup"><span class="label">隆桑集团</span></div>
-        <div class="location" id="office3" style="top: 35%; left: 10%;" data-popup="office3-popup"><span class="label">盛华集团</span></div>
-        <div class="location" id="office" style="top: 60%; left: 15%;" data-popup="office-popup"><span class="label">远洋集团</span></div>
-        <div class="location" id="TVstation" style="top: 65%; left: 20%;" data-popup="TVstation-popup"><span class="label">京港电视台</span></div>
-        <div class="location" id="office2" style="top: 70%; left: 15%;" data-popup="office2-popup"><span class="label">万城娱乐</span></div>
-        <div class="location" id="highschool" style="top: 85%; left: 30%;" data-popup="highschool-popup"><span class="label">京港第三高中</span></div>
-        <div class="location" id="other-places" style="top: 85%; left: 85%;" data-popup="other-places-popup"><span class="label">其他地点</span></div>
-    </div>
-
-    <!-- 遮罩层 -->
-    <div class="popup-overlay" id="cte-overlay" onclick="window.CTEMap.closeAllPopups()"></div>
-
-    <!-- 出行菜单 -->
-    <div id="travel-menu-overlay" onclick="if(event.target === this) window.CTEMap.closeTravelMenu()">
-        <div class="travel-menu-box">
-            <span class="close-btn" onclick="window.CTEMap.closeTravelMenu()">&times;</span>
-            <div id="travel-title" style="color:#e0c5a1; margin-bottom:20px;">前往目的地</div>
-            <div id="travel-content" class="travel-options"></div>
+        <div class="map-container" id="cte-map-container">
+            <div class="location" id="gov" style="top: 60%; left: 50%;" data-popup="gov-popup"><span class="label">京港市政府</span></div>
+            <div class="location" id="villa" style="top: 15%; left: 25%;" data-popup="villa-popup"><span class="label">私人别墅</span></div>
+            <div class="location" id="dorm" style="top: 15%; left: 50%;" data-popup="dorm-popup"><span class="label">CTE宿舍</span></div>
+            <div class="location" id="PrivateClub" style="top: 15%; left: 75%;" data-popup="PrivateClub-popup"><span class="label">私人会所</span></div>
+            <div class="location" id="airport" style="top: 35%; left: 85%;" data-popup="airport-popup"><span class="label">机场</span></div>
+            <div class="location" id="port" style="top: 65%; left: 85%;" data-popup="port-popup"><span class="label">港口</span></div>
+            <div class="location" id="office4" style="top: 25%; left: 15%;" data-popup="office4-popup"><span class="label">隆桑集团</span></div>
+            <div class="location" id="office3" style="top: 35%; left: 10%;" data-popup="office3-popup"><span class="label">盛华集团</span></div>
+            <div class="location" id="office" style="top: 60%; left: 15%;" data-popup="office-popup"><span class="label">远洋集团</span></div>
+            <div class="location" id="TVstation" style="top: 65%; left: 20%;" data-popup="TVstation-popup"><span class="label">京港电视台</span></div>
+            <div class="location" id="office2" style="top: 70%; left: 15%;" data-popup="office2-popup"><span class="label">万城娱乐</span></div>
+            <div class="location" id="highschool" style="top: 85%; left: 30%;" data-popup="highschool-popup"><span class="label">京港第三高中</span></div>
+            <div class="location" id="other-places" style="top: 85%; left: 85%;" data-popup="other-places-popup"><span class="label">其他地点</span></div>
         </div>
     </div>
-
-    <!-- 自定义地点弹窗 -->
-    <div id="other-places-popup" class="cte-popup">
-        <span class="close-btn" onclick="window.CTEMap.closeAllPopups()">&times;</span>
-        <h3>🗺️ 自定义目的地</h3>
-        <p>请输入您想前往的任意地点：</p>
-        <div style="text-align: center;">
-            <input type="text" id="custom-destination-input" class="travel-input" style="width: 90%; margin-top:10px;" placeholder="例如：海边">
-            <button class="cte-btn" onclick="window.CTEMap.goToCustomDestination()">🚀 前往</button>
-        </div>
-    </div>
-
-    <!-- 宿舍弹窗 -->
-    <div id="dorm-popup" class="cte-popup">
-        <span class="close-btn" onclick="window.CTEMap.closeAllPopups()">&times;</span>
-        <h3>🏠 CTE男团宿舍</h3>
-        <p>坐落在北区别墅区中的CTE男团宿舍，安保和私密性都是顶级。</p>
-        <img src="https://files.catbox.moe/qn281x.JPG" class="popup-image">
-        <div style="text-align: center;">
-            <button class="cte-btn" onclick="window.CTEMap.showPopup('dorm-detail-popup')">🚪 宿舍内部</button>
-            <button class="cte-btn" onclick="window.CTEMap.openTravelMenu('CTE男团宿舍')">🚀 前往</button>
-        </div>
-    </div>
-
-    <!-- 宿舍详情 -->
-    <div id="dorm-detail-popup" class="cte-popup">
-        <span class="close-btn" onclick="window.CTEMap.closeAllPopups()">&times;</span>
-        <h3>🛋️ 宿舍内部</h3>
-        <div class="interior-container">
-            <img src="https://files.catbox.moe/40ygiw.JPG" class="interior-image">
-            <div class="floor-nav">
-                <button class="floor-btn" onclick="window.CTEMap.openRooftopMenu()">1. 屋顶：天台花园酒吧</button>
-                <button class="floor-btn" onclick="window.CTEMap.openSubMenu('五楼：私人宿舍区', ['秦述', '司洛', '鹿言', '魏星泽', '周锦宁', '谌绪', '孟明赫', '亓谢', '魏月华', '桑洛凡', '你', '公共书房/阅览区'])">2. 五楼：私人宿舍区</button>
-                <button class="floor-btn" onclick="window.CTEMap.openSubMenu('四楼：健康与恢复区', ['健身房', '瑜伽与冥想室', '水疗与按摩室', '健康管理室'])">3. 四楼：健康与恢复区</button>
-                <button class="floor-btn" onclick="window.CTEMap.openSubMenu('三楼：专业练习区', ['主舞蹈室', '声乐录音棚', '造型与衣帽间', '成员休息室', '会议室'])">4. 三楼：专业练习区</button>
-                <button class="floor-btn" onclick="window.CTEMap.openSubMenu('二楼：个人创作与娱乐区', ['周锦宁个人工作室', '孟明赫个人工作室', '乐器练习室', '游戏娱乐室', '私人会客厅', '收藏室'])">5. 二楼：个人创作与娱乐区</button>
-                <button class="floor-btn" onclick="window.CTEMap.openSubMenu('一楼：生活与休闲区', ['前院与玄关', '客厅/公共休息区', '开放式厨房与餐厅', '储藏室与洗衣房', '后院与露天泳池'])">6. 一楼：生活与休闲区</button>
-            </div>
-            <div id="interior-sub-menu" class="sub-menu-overlay">
-                <div id="sub-menu-title" style="color:#b38b59; font-size:20px; margin-bottom:20px;"></div>
-                <div id="sub-menu-content" class="sub-menu-grid"></div>
-                <div class="sub-menu-close" style="margin-top:20px; cursor:pointer;" onclick="window.CTEMap.closeSubMenu()">[ 关闭菜单 ]</div>
-            </div>
-        </div>
-    </div>
-
-    <!-- 其他地点 (批量生成) -->
-    <div id="office-popup" class="cte-popup"><span class="close-btn" onclick="window.CTEMap.closeAllPopups()">&times;</span><h3>🏢 远洋集团</h3><p>主营航运、大宗商品与投资的家族企业。</p><div style="text-align:center"><button class="cte-btn" onclick="window.CTEMap.openTravelMenu('远洋集团')">🚀 前往</button></div></div>
-    <div id="villa-popup" class="cte-popup"><span class="close-btn" onclick="window.CTEMap.closeAllPopups()">&times;</span><h3>🏰 私人别墅</h3><p>你自己位于京港北区的一栋独栋别墅。</p><div style="text-align:center"><button class="cte-btn" onclick="window.CTEMap.openTravelMenu('私人别墅')">🚀 前往</button></div></div>
-    <div id="office2-popup" class="cte-popup"><span class="close-btn" onclick="window.CTEMap.closeAllPopups()">&times;</span><h3>☕ 万城娱乐</h3><p>国内最大的娱乐产业集团之一。</p><div style="text-align:center"><button class="cte-btn" onclick="window.CTEMap.openTravelMenu('万城娱乐')">🚀 前往</button></div></div>
-    <div id="office3-popup" class="cte-popup"><span class="close-btn" onclick="window.CTEMap.closeAllPopups()">&times;</span><h3>🏢 盛华集团</h3><p>老牌实业集团，在本地拥有深厚根基。</p><div style="text-align:center"><button class="cte-btn" onclick="window.CTEMap.openTravelMenu('盛华集团')">🚀 前往</button></div></div>
-    <div id="office4-popup" class="cte-popup"><span class="close-btn" onclick="window.CTEMap.closeAllPopups()">&times;</span><h3>🏢 隆桑集团</h3><p>京港市的新兴科技巨头。</p><div style="text-align:center"><button class="cte-btn" onclick="window.CTEMap.openTravelMenu('隆桑集团')">🚀 前往</button></div></div>
-    <div id="highschool-popup" class="cte-popup"><span class="close-btn" onclick="window.CTEMap.closeAllPopups()">&times;</span><h3>🏫 京港第三高中</h3><p>京港市著名的重点高中。</p><div style="text-align:center"><button class="cte-btn" onclick="window.CTEMap.openTravelMenu('京港第三高中')">🚀 前往</button></div></div>
-    <div id="gov-popup" class="cte-popup"><span class="close-btn" onclick="window.CTEMap.closeAllPopups()">&times;</span><h3>🏛️ 京港市政府</h3><p>城市行政中心。</p><div style="text-align:center"><button class="cte-btn" onclick="window.CTEMap.openTravelMenu('京港市政府')">🚀 前往</button></div></div>
-    <div id="PrivateClub-popup" class="cte-popup"><span class="close-btn" onclick="window.CTEMap.closeAllPopups()">&times;</span><h3>🍷 私人会所</h3><p>仅限会员进入的高级会所，隐秘性极高。</p><div style="text-align:center"><button class="cte-btn" onclick="window.CTEMap.openTravelMenu('私人会所')">🚀 前往</button></div></div>
-    <div id="TVstation-popup" class="cte-popup"><span class="close-btn" onclick="window.CTEMap.closeAllPopups()">&times;</span><h3>📺 京港电视台</h3><p>城市媒体中心，众多节目的录制现场。</p><div style="text-align:center"><button class="cte-btn" onclick="window.CTEMap.openTravelMenu('京港电视台')">🚀 前往</button></div></div>
-    <div id="airport-popup" class="cte-popup"><span class="close-btn" onclick="window.CTEMap.closeAllPopups()">&times;</span><h3>✈️ 机场</h3><p>连接京港与世界的交通枢纽。</p><div style="text-align:center"><button class="cte-btn" onclick="window.CTEMap.openTravelMenu('机场')">🚀 前往</button></div></div>
-    <div id="port-popup" class="cte-popup"><span class="close-btn" onclick="window.CTEMap.closeAllPopups()">&times;</span><h3>⚓ 港口</h3><p>繁忙的国际货运港口。</p><div style="text-align:center"><button class="cte-btn" onclick="window.CTEMap.openTravelMenu('港口')">🚀 前往</button></div></div>
-
 </div>
+
+<!-- 新增：行程表视图 -->
+<div id="cte-view-schedule" class="cte-view">
+    <div class="cte-wrapper">
+        <h1>当前行程安排</h1>
+        <h2 id="cte-schedule-status">正在读取最新状态...</h2>
+        
+        <div class="controls-bar">
+            <button class="cte-btn" onclick="window.CTEMap.refreshSchedule()">🔄 刷新行程 (读取 status_top)</button>
+        </div>
+
+        <div id="cte-timeline-container" class="cte-timeline-container">
+            <!-- 动态生成的时间轴内容 -->
+            <p style="text-align:center; color:#666; margin-top:50px;">暂无行程数据，请确保聊天记录中包含 &lt;status_top&gt; 标签。</p>
+        </div>
+    </div>
+</div>
+
+<!-- 遮罩层 -->
+<div class="popup-overlay" id="cte-overlay" onclick="window.CTEMap.closeAllPopups()"></div>
+
+<!-- 出行菜单 -->
+<div id="travel-menu-overlay" onclick="if(event.target === this) window.CTEMap.closeTravelMenu()">
+    <div class="travel-menu-box">
+        <span class="close-btn" onclick="window.CTEMap.closeTravelMenu()">&times;</span>
+        <div id="travel-title" style="color:#e0c5a1; margin-bottom:20px;">前往目的地</div>
+        <div id="travel-content" class="travel-options"></div>
+    </div>
+</div>
+
+<!-- 自定义地点弹窗 -->
+<div id="other-places-popup" class="cte-popup">
+    <span class="close-btn" onclick="window.CTEMap.closeAllPopups()">&times;</span>
+    <h3>🗺️ 自定义目的地</h3>
+    <p>请输入您想前往的任意地点：</p>
+    <div style="text-align: center;">
+        <input type="text" id="custom-destination-input" class="travel-input" style="width: 90%; margin-top:10px;" placeholder="例如：海边">
+        <button class="cte-btn" onclick="window.CTEMap.goToCustomDestination()">🚀 前往</button>
+    </div>
+</div>
+
+<!-- 宿舍弹窗 -->
+<div id="dorm-popup" class="cte-popup">
+    <span class="close-btn" onclick="window.CTEMap.closeAllPopups()">&times;</span>
+    <h3>🏠 CTE男团宿舍</h3>
+    <p>坐落在北区别墅区中的CTE男团宿舍，安保和私密性都是顶级。</p>
+    <img src="https://files.catbox.moe/qn281x.JPG" class="popup-image">
+    <div style="text-align: center;">
+        <button class="cte-btn" onclick="window.CTEMap.showPopup('dorm-detail-popup')">🚪 宿舍内部</button>
+        <button class="cte-btn" onclick="window.CTEMap.openTravelMenu('CTE男团宿舍')">🚀 前往</button>
+    </div>
+</div>
+
+<!-- 宿舍详情 -->
+<div id="dorm-detail-popup" class="cte-popup">
+    <span class="close-btn" onclick="window.CTEMap.closeAllPopups()">&times;</span>
+    <h3>🛋️ 宿舍内部</h3>
+    <div class="interior-container">
+        <img src="https://files.catbox.moe/40ygiw.JPG" class="interior-image">
+        <div class="floor-nav">
+            <button class="floor-btn" onclick="window.CTEMap.openRooftopMenu()">1. 屋顶：天台花园酒吧</button>
+            <button class="floor-btn" onclick="window.CTEMap.openSubMenu('五楼：私人宿舍区', ['秦述', '司洛', '鹿言', '魏星泽', '周锦宁', '谌绪', '孟明赫', '亓谢', '魏月华', '桑洛凡', '你', '公共书房/阅览区'])">2. 五楼：私人宿舍区</button>
+            <button class="floor-btn" onclick="window.CTEMap.openSubMenu('四楼：健康与恢复区', ['健身房', '瑜伽与冥想室', '水疗与按摩室', '健康管理室'])">3. 四楼：健康与恢复区</button>
+            <button class="floor-btn" onclick="window.CTEMap.openSubMenu('三楼：专业练习区', ['主舞蹈室', '声乐录音棚', '造型与衣帽间', '成员休息室', '会议室'])">4. 三楼：专业练习区</button>
+            <button class="floor-btn" onclick="window.CTEMap.openSubMenu('二楼：个人创作与娱乐区', ['周锦宁个人工作室', '孟明赫个人工作室', '乐器练习室', '游戏娱乐室', '私人会客厅', '收藏室'])">5. 二楼：个人创作与娱乐区</button>
+            <button class="floor-btn" onclick="window.CTEMap.openSubMenu('一楼：生活与休闲区', ['前院与玄关', '客厅/公共休息区', '开放式厨房与餐厅', '储藏室与洗衣房', '后院与露天泳池'])">6. 一楼：生活与休闲区</button>
+        </div>
+        <div id="interior-sub-menu" class="sub-menu-overlay">
+            <div id="sub-menu-title" style="color:#b38b59; font-size:20px; margin-bottom:20px;"></div>
+            <div id="sub-menu-content" class="sub-menu-grid"></div>
+            <div class="sub-menu-close" style="margin-top:20px; cursor:pointer;" onclick="window.CTEMap.closeSubMenu()">[ 关闭菜单 ]</div>
+        </div>
+    </div>
+</div>
+
+<!-- 其他地点 -->
+<div id="office-popup" class="cte-popup"><span class="close-btn" onclick="window.CTEMap.closeAllPopups()">&times;</span><h3>🏢 远洋集团</h3><p>主营航运、大宗商品与投资的家族企业。</p><div style="text-align:center"><button class="cte-btn" onclick="window.CTEMap.openTravelMenu('远洋集团')">🚀 前往</button></div></div>
+<div id="villa-popup" class="cte-popup"><span class="close-btn" onclick="window.CTEMap.closeAllPopups()">&times;</span><h3>🏰 私人别墅</h3><p>你自己位于京港北区的一栋独栋别墅。</p><div style="text-align:center"><button class="cte-btn" onclick="window.CTEMap.openTravelMenu('私人别墅')">🚀 前往</button></div></div>
+<div id="office2-popup" class="cte-popup"><span class="close-btn" onclick="window.CTEMap.closeAllPopups()">&times;</span><h3>☕ 万城娱乐</h3><p>国内最大的娱乐产业集团之一。</p><div style="text-align:center"><button class="cte-btn" onclick="window.CTEMap.openTravelMenu('万城娱乐')">🚀 前往</button></div></div>
+<div id="office3-popup" class="cte-popup"><span class="close-btn" onclick="window.CTEMap.closeAllPopups()">&times;</span><h3>🏢 盛华集团</h3><p>老牌实业集团，在本地拥有深厚根基。</p><div style="text-align:center"><button class="cte-btn" onclick="window.CTEMap.openTravelMenu('盛华集团')">🚀 前往</button></div></div>
+<div id="office4-popup" class="cte-popup"><span class="close-btn" onclick="window.CTEMap.closeAllPopups()">&times;</span><h3>🏢 隆桑集团</h3><p>京港市的新兴科技巨头。</p><div style="text-align:center"><button class="cte-btn" onclick="window.CTEMap.openTravelMenu('隆桑集团')">🚀 前往</button></div></div>
+<div id="highschool-popup" class="cte-popup"><span class="close-btn" onclick="window.CTEMap.closeAllPopups()">&times;</span><h3>🏫 京港第三高中</h3><p>京港市著名的重点高中。</p><div style="text-align:center"><button class="cte-btn" onclick="window.CTEMap.openTravelMenu('京港第三高中')">🚀 前往</button></div></div>
+<div id="gov-popup" class="cte-popup"><span class="close-btn" onclick="window.CTEMap.closeAllPopups()">&times;</span><h3>🏛️ 京港市政府</h3><p>城市行政中心。</p><div style="text-align:center"><button class="cte-btn" onclick="window.CTEMap.openTravelMenu('京港市政府')">🚀 前往</button></div></div>
+<div id="PrivateClub-popup" class="cte-popup"><span class="close-btn" onclick="window.CTEMap.closeAllPopups()">&times;</span><h3>🍷 私人会所</h3><p>仅限会员进入的高级会所，隐秘性极高。</p><div style="text-align:center"><button class="cte-btn" onclick="window.CTEMap.openTravelMenu('私人会所')">🚀 前往</button></div></div>
+<div id="TVstation-popup" class="cte-popup"><span class="close-btn" onclick="window.CTEMap.closeAllPopups()">&times;</span><h3>📺 京港电视台</h3><p>城市媒体中心，众多节目的录制现场。</p><div style="text-align:center"><button class="cte-btn" onclick="window.CTEMap.openTravelMenu('京港电视台')">🚀 前往</button></div></div>
+<div id="airport-popup" class="cte-popup"><span class="close-btn" onclick="window.CTEMap.closeAllPopups()">&times;</span><h3>✈️ 机场</h3><p>连接京港与世界的交通枢纽。</p><div style="text-align:center"><button class="cte-btn" onclick="window.CTEMap.openTravelMenu('机场')">🚀 前往</button></div></div>
+<div id="port-popup" class="cte-popup"><span class="close-btn" onclick="window.CTEMap.closeAllPopups()">&times;</span><h3>⚓ 港口</h3><p>繁忙的国际货运港口。</p><div style="text-align:center"><button class="cte-btn" onclick="window.CTEMap.openTravelMenu('港口')">🚀 前往</button></div></div>
