--- a/map.html
+++ b/map.html
@@ -58,7 +58,7 @@
     </div>
 </div>
 
-<!-- [新增] 参与者选择弹窗 -->
+<!-- [修改] 参与者选择弹窗 -->
 <div id="cte-participant-popup" class="cte-popup" style="max-width: 400px;">
     <span class="close-btn" onclick="window.CTEMap.closeAllPopups()">&times;</span>
     <h3>👥 选择参与人员</h3>
@@ -74,7 +74,7 @@
     </div>
 
     <div style="text-align:center; margin-top:15px; display:flex; gap:10px; justify-content:center;">
-        <button class="cte-btn" onclick="window.CTEMap.confirmExecution()" style="background:#b38b59; color:#1a1a1a;">✅ 确认执行</button>
+        <button class="cte-btn" onclick="window.CTEMap.proceedToLocationSelection()" style="background:#b38b59; color:#1a1a1a;">📍 选择地点</button>
         <button class="cte-btn" onclick="window.CTEMap.closeAllPopups()" style="border-color:#666; color:#888;">取消</button>
     </div>
 </div>
