--- a/map.html
+++ b/map.html
@@ -5,7 +5,7 @@
         <h2>双击标签查看详情，长按拖拽标签移动</h2>
 
         <div class="controls-bar">
-            <!-- [新增] 前往国家地图按钮 -->
+            <!-- 前往国家地图按钮 -->
             <button class="cte-btn" onclick="window.CTEMap.switchView('national-map')">🗺️ 前往国家地图</button>
             <span style="border-right: 1px solid #444; margin: 0 10px; height: 15px;"></span>
             <span>更换背景：</span>
@@ -32,7 +32,7 @@
     </div>
 </div>
 
-<!-- [新增] 国家地图视图 -->
+<!-- 国家地图视图 -->
 <div id="cte-view-national-map" class="cte-view">
     <div class="cte-wrapper" style="width: 95%;">
         <h1>权贵之心：国家战略地图</h1>
@@ -40,6 +40,11 @@
         
         <div class="controls-bar" style="justify-content: center;">
              <button class="cte-btn" onclick="window.CTEMap.switchView('map')">↩️ 返回京港市</button>
+             <span style="border-right: 1px solid #444; margin: 0 10px; height: 15px;"></span>
+             <!-- [新增] 国家地图背景控制 -->
+             <button class="cte-btn" onclick="document.getElementById('national-bg-upload').click()">🖼️ 更换地图背景</button>
+             <button class="cte-btn" onclick="window.CTEMap.resetNationalBackground()">🔄 恢复默认</button>
+             <input type="file" id="national-bg-upload" accept="image/*" style="display:none;" onchange="window.CTEMap.changeNationalBackground(this)">
         </div>
 
         <!-- 国家地图容器 -->
@@ -57,7 +62,7 @@
     </div>
 </div>
 
-<!-- 新增：行程表视图 -->
+<!-- 行程表视图 -->
 <div id="cte-view-schedule" class="cte-view">
     <div class="cte-wrapper">
         <h1>当前行程安排</h1>
@@ -86,7 +91,7 @@
     </div>
 </div>
 
-<!-- [修改] 参与者选择弹窗 -->
+<!-- 参与者选择弹窗 -->
 <div id="cte-participant-popup" class="cte-popup" style="max-width: 400px;">
     <span class="close-btn" onclick="window.CTEMap.closeAllPopups()">&times;</span>
     <h3>👥 选择参与人员</h3>
