--- a/map.html
+++ b/map.html
@@ -84,6 +84,7 @@
             <button class="cte-idol-rpg-nav-btn" data-subview="roster" title="艺人阵容"><i class="fa-solid fa-users"></i></button>
             <button class="cte-idol-rpg-nav-btn" data-subview="agency" title="事务所运营"><i class="fa-solid fa-building"></i></button>
             <button class="cte-idol-rpg-nav-btn" data-subview="shop" title="采购中心"><i class="fa-solid fa-cart-shopping"></i></button>
+            <button class="cte-idol-rpg-nav-btn" data-subview="news" title="每日快报"><i class="fa-solid fa-newspaper"></i></button>
         </div>
         
         <!-- 主内容区 -->
