--- a/map.html
+++ b/map.html
@@ -23,7 +23,7 @@
             <div class="cte-idol-location" id="cte-idol-loc-port" style="top: 65%; left: 85%;" data-popup="cte-idol-port-popup"><span class="label">港口</span></div>
             <div class="cte-idol-location" id="cte-idol-loc-office4" style="top: 25%; left: 15%;" data-popup="cte-idol-office4-popup"><span class="label">隆桑集团</span></div>
             <div class="cte-idol-location" id="cte-idol-loc-office3" style="top: 35%; left: 10%;" data-popup="cte-idol-office3-popup"><span class="label">盛华集团</span></div>
-            <div class="cte-idol-location" id="cte-idol-loc-office" style="top: 60%; left: 15%;" data-popup="cte-idol-office-popup"><span class="label">森云制药s<span></div>
+            <div class="cte-idol-location" id="cte-idol-loc-office" style="top: 60%; left: 15%;" data-popup="cte-idol-office-popup"><span class="label">森云制药<span></div>
             <div class="cte-idol-location" id="cte-idol-loc-TVstation" style="top: 65%; left: 20%;" data-popup="cte-idol-TVstation-popup"><span class="label">京港电视台</span></div>
             <div class="cte-idol-location" id="cte-idol-loc-office2" style="top: 70%; left: 15%;" data-popup="cte-idol-office2-popup"><span class="label">万城娱乐</span></div>
             <div class="cte-idol-location" id="cte-idol-loc-highschool" style="top: 85%; left: 30%;" data-popup="cte-idol-highschool-popup"><span class="label">京港第三高中</span></div>
@@ -297,6 +297,7 @@
 <div id="cte-idol-TVstation-popup" class="cte-idol-popup"><span class="cte-idol-close-btn" onclick="window.CTEIdolManager.closeAllPopups()">&times;</span><h3>📺 京港电视台</h3><p>城市媒体中心，众多节目的录制现场。</p><div style="text-align:center"><button class="cte-idol-btn" onclick="window.CTEIdolManager.openTravelMenu('京港电视台')">🚀 前往</button></div></div>
 <div id="cte-idol-airport-popup" class="cte-idol-popup"><span class="cte-idol-close-btn" onclick="window.CTEIdolManager.closeAllPopups()">&times;</span><h3>✈️ 机场</h3><p>连接京港与世界的交通枢纽。</p><div style="text-align:center"><button class="cte-idol-btn" onclick="window.CTEIdolManager.openTravelMenu('机场')">🚀 前往</button></div></div>
 <div id="cte-idol-port-popup" class="cte-idol-popup"><span class="cte-idol-close-btn" onclick="window.CTEIdolManager.closeAllPopups()">&times;</span><h3>⚓ 港口</h3><p>繁忙的国际货运港口。</p><div style="text-align:center"><button class="cte-idol-btn" onclick="window.CTEIdolManager.openTravelMenu('港口')">🚀 前往</button></div></div>
+
 
 
 
